@@ -72,7 +72,7 @@
 	</TR>
 	{foreachelse}
 	<TR>
-		<TD ALIGN="center" COLSPAN="{math equation="4+x*2" x=$taxescount}">
+		<TD ALIGN="center" COLSPAN="{math equation="5+x*2" x=$taxescount}">
 			<P>&nbsp;</P>
 			<P><B>{t}No such invoices in selected time period.{/t}</B></P>
 			<P>&nbsp;</P>
